--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,9 @@ text-size-adjust:none;
             <div class="row" style="min-height: 400px;">
                 <div class="col-sm-6 col-md-8" style="valign: middle&#39;; ">
                     <h1 class="big_title" style="background: none;font-family: quicksand; font-weight: normal;"> Trusted, verifiable <span id="rotatingTitle" >product</span> reviews</h1>
-                    <h3 class="small_title" style="font-weight: normal;font-family: quicksand">Scoosh food trucks offer an environment-friendly, affordable and healthy food serving option at your party!</h3>
+                    <h3 class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:6px;">
+                    Discover trusted and reliable services accumulated & verified by real users.  
+                    </h3>
                     <img class="mob-banner" src="./sc/sbgm.png" style="margin-top: 30px;margin-bottom: 20px;" />
                 </div>
 
