--- a/public/index.html
+++ b/public/index.html
@@ -208,12 +208,12 @@ td {
   margin-top: 12px;
 }
 #G {
-    background: -moz-linear-gradient(top,rgba(255,255,255,1) 0,rgba(255,255,255,0) 100%);
+    background: -moz-linear-gradient(top,rgb(237, 245, 253) 0,rgba(255,255,255,0) 100%);
     background: -webkit-gradient(linear,left top,left bottom,color-stop(0,rgba(255,255,255,1)),color-stop(100%,rgba(255,255,255,0)));
     background: -webkit-linear-gradient(top,rgba(255,255,255,1) 0,rgba(255,255,255,0) 100%);
     background: -o-linear-gradient(top,rgba(255,255,255,1) 0,rgba(255,255,255,0) 100%);
     background: -ms-linear-gradient(top,rgba(255,255,255,1) 0,rgba(255,255,255,0) 100%);
-    background: linear-gradient(to bottom,rgba(255,255,255,1) 0,rgba(255,255,255,0) 100%);
+    background: linear-gradient(to bottom,rgb(237, 245, 253) 0,rgba(255,255,255,0) 100%);
     position: fixed;
     bottom: 0;
     left: 0;
@@ -297,7 +297,6 @@ td {
       height: 100px;
       position: fixed;
       width: 297px;
-      background: rgba(255, 255, 255, 0.8);
     }
 }
 
