--- a/public/index.html
+++ b/public/index.html
@@ -340,7 +340,7 @@ td {
 <br>
 <hr size="1" class="line"/>
 <div class="step" style="width:265px">Chirrp creates your wishlist</div>
-<div class="step-desc">Chirrp analyzes millions of verified reviews & purchase data and matches them with your needs to present you width relevant matches!</div>
+<div class="step-desc">Chirrp analyzes millions of verified reviews & purchase data and matches them with your needs to present you with relevant matches!</div>
 <img class="snap" src="sc/wl.png" style="margin-top:40px;width:300px" />
 <br><br>
 <hr size="1" class="line"/>
