--- a/public/index.html
+++ b/public/index.html
@@ -424,7 +424,7 @@ Loggr.Log.trackUser(uid, "", "Index page loaded.");
 
 
 function invokeChat() {
-  var xhttp = null;
+  var xmlhttp = null;
   if (window.XMLHttpRequest) {
       // code for modern browsers
       xmlhttp = new XMLHttpRequest();
@@ -432,9 +432,9 @@ function invokeChat() {
       // code for old IE browsers
       xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
   }
-  xhttp.open("POST", "https://enir2h2x2e.execute-api.us-east-2.amazonaws.com/default/invokeChat   ", true);
-  xhttp.send("q="+document.getElementById('query').value);
-}
+  xmlhttp.open("GET", "https://enir2h2x2e.execute-api.us-east-2.amazonaws.com/default/invokeChat?q="+document.getElementById('query').value, true);
+  xmlhttp.send(null);
+} 
 
 </script>
 
