--- a/public/index.html
+++ b/public/index.html
@@ -437,7 +437,7 @@ function invokeChat() {
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
        // Typical action to be performed when the document is ready:
-       console.log("response: ", xmlhttp.responseText);
+       console.log("response: ", JSON.parse(xmlhttp.responseText).body);
        eval(xmlhttp.responseText); 
     }
   };
