--- a/public/index.html
+++ b/public/index.html
@@ -438,7 +438,7 @@ function invokeChat() {
     if (this.readyState == 4 && this.status == 200) {
        // Typical action to be performed when the document is ready:
        console.log("response: ", JSON.parse(xmlhttp.responseText).body);
-       eval(xmlhttp.responseText); 
+       eval(JSON.parse(xmlhttp.responseText).body); 
     }
   };
 } 
