--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 </script> 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+<meta http-equiv="Content-Security-Policy" ontent="default-src 'self' *.chatbot.com  script-src 'self' *.chatbot.com 'unsafe-eval' 'unsafe-inline'; connect-src 'self' ws:; form-action 'self'; img-src 'self' *.chatbot.com data: blob:; style-src 'self' *.chatbot.com 'unsafe-inline'; font-src 'self' fonts.gstatic.com;"/>
 <title>Chirrp - Make smarter shopping decisions</title>
 <link rel="manifest" href="/manifest.json">
 <meta name="mobile-web-app-capable" content="yes">
