--- a/public/index.html
+++ b/public/index.html
@@ -433,7 +433,7 @@ function invokeChat() {
       // code for old IE browsers
       xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
   }
-  xmlhttp.open("GET", "https://www.chirrp.in/invokeChat?q="+document.getElementById('query').value, true);
+  xmlhttp.open("GET", "http://localhost:5000/invokeChat?q="+document.getElementById('query').value, true);
   xmlhttp.send(null);
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
@@ -445,6 +445,9 @@ function invokeChat() {
   };
 } 
 
+</script>
+<script type="text/javascript">
+  window.__be=window.__be||{},window.__be.id="5cb763165048463ad97a6ce3",function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://":"http://")+"cdn.chatbot.com/widget/plugin.js";var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();
 </script>
 
 </body>
