--- a/public/index.html
+++ b/public/index.html
@@ -433,7 +433,7 @@ function invokeChat() {
       // code for old IE browsers
       xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
   }
-  xmlhttp.open("GET", "http://localhost:5000/invokeChat?q="+document.getElementById('query').value, true);
+  xmlhttp.open("GET", "https://www.chirrp.in/invokeChat?q="+document.getElementById('query').value, true);
   xmlhttp.send(null);
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
