--- a/public/getstyled.html
+++ b/public/getstyled.html
@@ -351,13 +351,13 @@ input {
      $('#container').css('opacity','0.3');
      $('.second').css('opacity','0.3');
      $('.loading-container').show();
-     Loggr.Log.trackUser(uid, "", "User request submitted.");
+     /*Loggr.Log.trackUser(uid, "", "User request submitted.");
      Loggr.Log.trackUser(uid, "", "Date:"+document.getElementById("partydate").value);
      Loggr.Log.trackUser(uid, "", "Occasion:"+document.getElementById("occasion").value);
      Loggr.Log.trackUser(uid, "", "Mode:"+mode);
      Loggr.Log.trackUser(uid, "", "Number:"+document.getElementById("num").value);
      setTimeout(function(){$('.loading-container').hide();$('.second').css('opacity','1');$('#container').css('opacity','1');$('.second').html('Thank you!<br><div class="step-desc">Our stylist will get in touch with you soon.</div>');},1000);
-     setTimeout(function(){$('.button-container').html('');},1000);
+     setTimeout(function(){$('.button-container').html('');},1000);*/
   }
   function onSelectChange() {
     window.mode = document.getElementById('mode').options[document.getElementById('mode').selectedIndex].value;
