--- a/public/index.html
+++ b/public/index.html
@@ -552,7 +552,7 @@ td {
     border-top: 7px solid rgba(0,0,0,0);
     border-left: 7px solid rgba(0,0,0,0);
     border-radius: 50px;
-    box-shadow: 0 0 35px #343339;
+    box-shadow: 0 0 35px #99bff1;
     width: 50px;
     height: 50px;
     -webkit-animation: spin 1.2s infinite linear;
