--- a/public/index.html
+++ b/public/index.html
@@ -788,7 +788,7 @@ function invokeChat() {
        // Typical action to be performed when the document is ready:
        
        console.log("response: ", xmlhttp.responseText);
-       window.chatRes = JSON.parse(xmlhttp.responseText).body;
+       window.chatRes = xmlhttp.responseText;
        eval('window.__be=window.__be||{},window.__be.id="5cb8b496dd2e6ec1516e2bea",function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://":"http://")+"cdn.chatbot.com/widget/plugin.js";var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();'); 
        hideLoader();
        setTimeout("$('.speech-bubble').show();",1000);
