--- a/public/index.html
+++ b/public/index.html
@@ -642,7 +642,7 @@ td {
 }
 .slider {
   background: transparent;
-  height: 26  0px;
+  height: 260px;
   margin: auto;
   overflow: hidden;
   position: relative;
@@ -708,7 +708,7 @@ td {
 <span class="loading-span">Researching...</span></div>
 
 <div class="speech-bubble">
-  <span>Chirrp is ready to assist. Click chat icon to begin!</span>
+  <span>Chirrp is ready to assist. Answer quick questions by tapping the chat icon below.</span>
 </div>
 
 <div id="background-wrap" style="display: none">
