--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     width: 297px;
     bottom: 0px;
     height: 100px;
-    padding-top: 36px;
+    padding-top: 4px;
     z-index: 2;
 }
 .bag {
@@ -261,6 +261,7 @@ td {
     -webkit-box-shadow: 0px 13px 25px -12px rgba(0,0,0,0.18);
     -moz-box-shadow: 0px 13px 25px -12px rgba(0,0,0,0.18);
     box-shadow: 0px 13px 25px -12px rgba(0,0,0,0.18);
+    z-index: 9;
     }
     .headline {
       margin: 0 auto;
@@ -682,7 +683,7 @@ td {
   margin: 0 auto;
   left: 0;
   right: 0;
-  margin-top: 45%;
+  margin-top: 25%;
   opacity: 0.2;
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
@@ -776,6 +777,52 @@ td {
   }
 }
 
+.mob-h {
+    font-family: Open Sans;
+    border-radius: 12px;
+    width: 226px;
+    z-index: -1;
+    display: block;
+    padding-bottom: 8px;
+    background: #fff;
+    letter-spacing: 1px;
+    font-size: 14px;
+    position: relative;
+    bottom: 7px;
+    left: 17px;
+    padding-left: 13px;
+    border: 1px solid #a2a6b1;
+    top: -5px;
+    font-weight: 800;
+    color: #666;
+  }
+
+  .bounce {
+    display: inline-block;
+    margin-top: 20px;
+    -moz-animation: bounce 1.7s infinite;
+    -webkit-animation: bounce 1.7s infinite;
+    animation: bounce 1.7s infinite;
+    z-index: 0;
+  }
+  .bounce a {
+      margin-top: -15px;
+      margin-left: 6px;
+      position: absolute;
+  }
+
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+
 </style>
 </head>
 
@@ -795,7 +842,19 @@ td {
 
   <div class="prod-container city"></div>
   <div class="button-container">
-    <input id="query" type="text" style="height: 47px;width: 100%;font-size: 20px;padding: 12px;border: 2px solid #9fa4af;border-radius: 37px;margin-top: -10px;padding-right: 75px;" value="smartphones" />
+    <span class="mob-h">Start researching here
+    <div class="bounce">
+              <a href="#">
+                <svg version="1.1" id="Capa_1" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 444.819 444.819" style="enable-background:new 0 0 444.819 444.819;" xml:space="preserve"><g><path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561
+        L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416
+        C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848
+        c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693
+        C444.819,130.287,441.295,121.629,434.252,114.203z" fill="#666666"></path>
+</g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
+              </a>
+            </div>
+          </span>
+    <input id="query" type="text" style="font-family:'f';height: 47px;width: 100%;font-size: 20px;padding: 12px;border: 2px solid #9fa4af;border-radius: 37px;margin-top: -10px;padding-right: 75px;z-index: 1;" value="smartphones" />
     <a id="cta" href="#" onclick="invokeChat()" class="btn" style="width: 73px;position: relative;float: right;right: -6px;bottom: 47px;height: 47px;z-index: 1;"><span>Go</span></a>
   </div>
 
@@ -841,7 +900,7 @@ td {
 <img class="snap" src="sc/wl.png" style="margin-top:40px;width:300px" />
 <br><br>
 <hr size="1" class="line"/>
-<div class="step" style="width:286px;">Recently researched on Chirrp</div>
+<div class="step" style="width:288px;">Recently researched on Chirrp</div>
 <div class="step-desc" style="min-height: 340px">
   
 
@@ -953,7 +1012,7 @@ function invokeChat() {
       // code for old IE browsers
       xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
   }
-  xmlhttp.open("GET", window.location.protocol+"//www.chirrp.in/invokeChat?q="+document.getElementById('query').value, true);
+  xmlhttp.open("GET", window.location.protocol+"//localhost:5000/invokeChat?q="+document.getElementById('query').value, true);
   xmlhttp.send(null);
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
@@ -982,7 +1041,7 @@ function fetchRecentlyViewed() {
       // code for old IE browsers
       xmlhttp1 = new ActiveXObject("Microsoft.XMLHTTP");
   }
-  xmlhttp1.open("GET", window.location.protocol+"//www.chirrp.in/getRecentlyResearched", true);
+  xmlhttp1.open("GET", window.location.protocol+"//localhost:5000/getRecentlyResearched", true);
   xmlhttp1.send(null);
   xmlhttp1.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
