--- a/public/index.html
+++ b/public/index.html
@@ -1026,7 +1026,7 @@ function invokeChat() {
       // code for old IE browsers
       xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
   }
-  xmlhttp.open("GET", window.location.protocol+"//localhost:5000/invokeChat?q="+document.getElementById('query').value, true);
+  xmlhttp.open("GET", window.location.protocol+"//www.chirrp.in/invokeChat?q="+document.getElementById('query').value, true);
   xmlhttp.send(null);
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
@@ -1056,7 +1056,7 @@ function fetchRecentlyViewed() {
       // code for old IE browsers
       xmlhttp1 = new ActiveXObject("Microsoft.XMLHTTP");
   }
-  xmlhttp1.open("GET", window.location.protocol+"//localhost:5000/getRecentlyResearched", true);
+  xmlhttp1.open("GET", window.location.protocol+"//www.chirrp.in/getRecentlyResearched", true);
   xmlhttp1.send(null);
   xmlhttp1.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
