--- a/public/index.html
+++ b/public/index.html
@@ -884,7 +884,7 @@ td {
     
 </div>
 
-<a id="startNewSearch" href="/" onclick="invokeChat()" class="btn" style="width: 226px;position: absolute;float: left;right: -6px;bottom: 47px;height: 51px;z-index: 1;border-radius: 6px;left: 20px;top: 78px;box-shadow: rgba(0, 0, 0, 0.18) 0px 13px 25px -12px;border: 1px solid #669adf;color: #669adf;display: none;"><span><b style="
+<a id="startNewSearch" href="/" class="btn" style="width: 226px;position: absolute;float: left;right: -6px;bottom: 47px;height: 51px;z-index: 1;border-radius: 6px;left: 20px;top: 78px;box-shadow: rgba(0, 0, 0, 0.18) 0px 13px 25px -12px;border: 1px solid #669adf;color: #669adf;display: none;"><span><b style="
     font-size: 18px;
     font-family: Quicksand;
     left: -28px;
