--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+  overflow-x: hidden;
+}
 .content {
     position: relative;
     margin: 0 auto;
@@ -894,7 +897,7 @@ td {
 
 <div id="box" class="center-img"><img src="sc/chirrpbird.png" style="width: 137px;"></div>
 
-<div class="second" >Gazillion shopping decisions! <br>One bot.
+<div class="second" >Your personal<br>shopping guide.
 <br><br>
 <div style="font-size: 17px;font-family: Open Sans;margin-top: -10px;">
   In the era of me-too products & fake reviews, finding authentic products that suit your needs can be tricky! <br><br>
