--- a/public/index.html
+++ b/public/index.html
@@ -919,7 +919,7 @@ td {
 
 <div id="box" class="center-img"><img src="sc/chirrpbird.png" style="width: 137px;"></div>
 
-<div class="second" >Your personal<br>shopping guide.
+<div class="second" >Personalized<br>shopping advice.
 <br><br>
 <div style="font-size: 17px;font-family: Open Sans;margin-top: -10px;">
   In the era of me-too products & fake reviews, finding authentic products that suit your needs can be tricky! <br><br>
@@ -984,8 +984,36 @@ socket.on('product-found', function(msg){
       console.log('msg: ', msg);
     });
 
+
+function fetchWishList(q) {
+  var xmlhttp = null;
+  if (window.XMLHttpRequest) {
+      // code for modern browsers
+      xmlhttp = new XMLHttpRequest();
+   } else {
+      // code for old IE browsers
+      xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+  }
+  if(sessionStorage.getItem('query') != null && sessionStorage.getItem('query') != document.getElementById('query').value) {
+    setTimeout(freshSearchMsg, 4000);
+    setTimeout(hideFreshSearchMsg, 14000);
+  }
+  sessionStorage.setItem('query', document.getElementById('query').value);
+  xmlhttp.open("GET", window.location.protocol+"//www.chirrp.in/fetchWishList?q="+q+"&main="+document.getElementById('query').value, true);
+  xmlhttp.send(null);
+  xmlhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+       // Typical action to be performed when the document is ready:
+       
+       console.log("response: ", xmlhttp.responseText);
+       
+    }
+  };
+}
+
 socket.on('shopping parameters captured', function(msg){
       console.log('msg: ', msg);
+      fetchWishList(msg.q);
     });
 
 var guid = function() {
