--- a/public/index.html
+++ b/public/index.html
@@ -1194,7 +1194,7 @@ document.addEventListener('DOMContentLoaded',function(event){
   }
   // start a typewriter animation for a text in the dataText array
    function StartTextAnimation(i) {
-     if (typeof dataText[i] == 'undefined'){
+     if (dataText && dataText[i] && typeof dataText[i] == 'undefined'){
         setTimeout(function() {
           StartTextAnimation(0);
         }, 20000);
