--- a/public/index.html
+++ b/public/index.html
@@ -1194,6 +1194,7 @@ document.addEventListener('DOMContentLoaded',function(event){
   }
   // start a typewriter animation for a text in the dataText array
    function StartTextAnimation(i) {
+    try{
      if (dataText && dataText[i] && typeof dataText[i] == 'undefined'){
         setTimeout(function() {
           StartTextAnimation(0);
@@ -1201,12 +1202,13 @@ document.addEventListener('DOMContentLoaded',function(event){
      }
      // check if dataText[i] exists
     if (i < dataText[i].length) {
-      // text exists! start typewriter animation
-     typeWriter(dataText[i], 0, function(){
-       // after callback (and whole text has been animated), start next text
-       StartTextAnimation(i + 1);
-     });
-    }
+        // text exists! start typewriter animation
+      typeWriter(dataText[i], 0, function(){
+         // after callback (and whole text has been animated), start next text
+         StartTextAnimation(i + 1);
+       });
+      }
+    } catch(e) {}
   }
   // start the text animation
   StartTextAnimation(0);
