--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,7 @@ text-size-adjust:none;
             font-size: 20px;
             line-height: 28px;
             color: #666;
+            margin-top: 16px;
         }
 
         .panel-center {
@@ -140,6 +141,7 @@ text-size-adjust:none;
                     line-height: 30px;
                 }
                 h3.small_title {
+                  margin-top: 0px;
                   font-size: 16px;
                   line-height: 22px;
                   color: #666;
