--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@ text-size-adjust:none;
         <div class="container">
             <div class="row" style="min-height: 400px;">
                 <div class="col-sm-6 col-md-8" style="valign: middle&#39;; ">
-                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Recommendations we can <span id="rotatingTitle" style="font-weight: bold;" >trust</span></h1>
+                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Recommendations you can <span id="rotatingTitle" style="font-weight: bold;" >trust</span></h1>
                     <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;">
                      
                     Cluezy handpicks the most relevant and trustable customer opinions to help you decide.
