--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
 
 .logo {
   margin-top: 15px;
-  width: 100px
+  width: 150px
 }
 
 @media (max-width: 599px){
 .logo {
   margin-top: 15px;
-  width: 75px
+  width: 125px
 }
 }
 
@@ -311,7 +311,7 @@ text-size-adjust:none;
             </button>
             <!-- End Toggle Nav Link For Mobiles -->
             <a class="navbar-brand " href="http://www.scoosh.in" style="height: 40px;">
-                <img alt="cluezy.com" class="logo" src="./img/cluezy2.png" >
+                <img alt="cluezy.com" class="logo" src="./img/revvora.png" >
             </a>
         </div>
         <div class="navbar-collapse collapse">
@@ -348,10 +348,10 @@ text-size-adjust:none;
         <div class="container">
             <div class="row" style="min-height: 400px;">
                 <div class="col-sm-6 col-md-8" style="valign: middle&#39;; ">
-                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Recommendations you can <span id="rotatingTitle" style="font-weight: bold;" >trust</span></h1>
+                    <h1 class="big_title" style="background: none;font-weight: normal;font-family: quicksand"> Never settle for ordinary <span id="rotatingTitle1" style="font-weight: bold;" ></span></h1>
                     <h3 id="desc" class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:0px;">
                      
-                    Cluezy handpicks the most relevant and trustable customer opinions to help you decide.
+                    The only site that sends special questionnaire to each reviewer to cross-validate their claims.
                     </h3>
                     <h3 class="small_title" style="font-weight: normal;font-family: quicksand;margin-left:6px;">
                     
